# musl-locales

./: .gitlab-ci.yml  CMakeLists.txt  README.md  categories.c  categories.h  config.h.in  locale.c  locale.in  musl.pot
cmake/: Translations.cmake  TranslationsMusl.cmake
musl-po/: CMakeLists.txt  LOCALES  ch_DE.po  en_GB.po  en_US.po  fr_FR.po  he_IL.po  musl.pot  ru_RU.po
po/: CMakeLists.txt  LINGUAS  LINGUAS.in  ch_DE.po  de_DE.po  en_US.po  es_ES.po  fr_FR.po  he_IL.po  musl-locales.pot  ru.po
